[package]
name = "ppm"
version = "0.1.0"
authors = ["AnisBarr <barrma@hotmail.fr> ", "JugurthaBouhadoun <jbouhadoun@gmail.com >"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "src"
path = "src/main.rs"
crate-type = ["dylib"]

[dependencies]
cty = "0.2.1"
